-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b26
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246681 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8252068 | 11.0.10-oracle | Vaibhav Choudhary | P4 | Resolved | Fixed | b01 |
| JDK-8252318 | 11.0.9-oracle | Vaibhav Choudhary | P4 | Resolved | Fixed | b06 |
| JDK-8235478 | 11.0.7 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8247801 | openjdk8u272 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8245230 | 8u271 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8251597 | emb-8u271 | Kevin Walls | P4 | Resolved | Fixed | team |
| JDK-8245224 | 7u281 | Kevin Walls | P4 | Resolved | Fixed | b01 |
This leads to bad output like „unknown MS VC++:1916“ in the hs_err file.
- backported by
-
JDK-8235478 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8245224 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8245230 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8246681 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8247801 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8251597 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8252068 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
-
JDK-8252318 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
- relates to
-
JDK-8235325 build failure on Linux after 8235243
-
- Resolved
-