8235243: handle VS2017 15.9 and VS2019 in abstract_vm_version

Reviewed-by: dholmes, mdoerr